--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">OurFriendlyMeeting</string>
+    <string name="app_name">SharingHobby</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="title_activity_account_use">AccountUseActivity</string>
@@ -13,4 +13,8 @@
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
     <string name="title_activity_user_account">UserAccountActivity</string>
     <string name="title_activity_made_group3">MadeGroup3Activity</string>
+
+    <string name="please_input_search_keyword">검색어를 입력해주세요.</string>
+    <string name="search">검색</string>
+    <string name="empty_result_text">검색 결과가 없습니다.</string>
 </resources>
