--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,5 +17,5 @@
     <string name="please_input_search_keyword">검색어를 입력해주세요.</string>
     <string name="search">검색</string>
     <string name="empty_result_text">검색 결과가 없습니다.</string>
-    <string name="please_input_building">위치 주변의 건물을 입력해주세요.</string>
+    <string name="please_input_building">현재 위치를 입력해주세요.</string>
 </resources>
